# retail-kiosk

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
data/brew-corner/: README.md  catalog.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: browserVoice.ts  main.tsx  sse.ts  styles.css  thinkingPhrases.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatThread.tsx  ConversationSidebar.tsx  StatusPipeline.tsx  VoiceOverlay.tsx
frontend/src/hooks/: useRotatingPhrase.ts
frontend/src/pages/: AdminPage.tsx  CustomerPage.tsx
src/retail_kiosk/: __init__.py  catalog.py  chunk_meta.py  chunking.py  config.py  conversations.py  edge_sync.py  intent.py  main.py  models.py  stream_ask.py  voice_kiosk.py  voice_proxy.py
tests/: brew-corner-catalog.json  test_intent.py  test_retail_kiosk.py  upload-catalog-to-edge.py
