[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retail-kiosk"
version = "0.1.0"
description = "Retail kiosk admin - sync document chunks to Moorcheh Edge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "moorcheh-edge",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
retail-kiosk-api = "retail_kiosk.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_kiosk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
